<resources>
    <string name="app_name">CashierDemo</string>
    <string name="cashier_swingcard">刷卡</string>
    <string name="zxing_pay">扫码支付</string>
    <string name="member_consume">会员消费</string>
    <string name="more">更多</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="point">·</string>
    <string name="zxingpay_bar_code">扫描不上?</string>
    <string name="zxingpay_receiver">收款二维码</string>
    <string name="zxingpay_receiver_gopay">扫描顾客的二维码</string>

</resources>
