<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="171px"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/tv_input_seven"
        android:layout_width="240px"
        android:layout_height="171px"
        android:clickable="true"
        android:layout_weight="1"
        android:background="@drawable/select_tv_num"
        android:gravity="center"
        android:text="@string/seven"
        android:textColor="@color/input_cash_view"
        android:textSize="84px" />

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@color/cashier_position" />

    <TextView
        android:id="@+id/tv_input_eight"
        android:layout_width="240px"
        android:layout_height="171px"
        android:clickable="true"
        android:layout_weight="1"
        android:background="@drawable/select_tv_num"
        android:gravity="center"
        android:text="@string/eight"
        android:textColor="@color/input_cash_view"
        android:textSize="84px" />

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@color/cashier_position" />

    <TextView
        android:id="@+id/tv_input_nine"
        android:layout_width="240px"
        android:layout_height="171px"
        android:layout_weight="1"
        android:background="@drawable/select_tv_num"
        android:gravity="center"
        android:clickable="true"
        android:text="@string/nine"
        android:textColor="@color/input_cash_view"
        android:textSize="84px" />

</LinearLayout>
