<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180px"
    android:background="#fff"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/cashier_position" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_cashier"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_cashier"
                    android:layout_width="78px"
                    android:layout_height="57px"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30px"
                    android:src="@drawable/select_iv_cashier" />

                <TextView
                    android:id="@+id/tv_cashier_swingcard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20px"
                    android:text="@string/cashier_swingcard"
                    android:textColor="@color/normal_black_press"
                    android:textSize="30px" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_zxing_pay"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_zxing_pay"
                    android:layout_width="72px"
                    android:layout_height="62px"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30px"
                    android:src="@drawable/select_iv_zxing_pay" />

                <TextView
                    android:id="@+id/tv_zxing_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20px"
                    android:text="@string/zxing_pay"
                    android:textColor="@color/normal_black_press"
                    android:textSize="30px" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_member_consume"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_member_consume"
                    android:layout_width="70px"
                    android:layout_height="64px"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30px"
                    android:src="@drawable/select_iv_member_consume" />

                <TextView
                    android:id="@+id/tv_member_consume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20px"
                    android:text="@string/member_consume"
                    android:textColor="@color/normal_black_press"
                    android:textSize="30px" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_more"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/iv_more"
                    android:layout_width="72px"
                    android:layout_height="72px"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30px"
                    android:src="@drawable/select_iv_more" />

                <TextView
                    android:id="@+id/tv_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20px"
                    android:text="@string/more"
                    android:textColor="@color/normal_black_press"
                    android:textSize="30px" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
